--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,83 @@ p {
     font-size: 14px;
 }
 
+@media screen and (max-width: 414px) {
+#header-overlay {
+      height: 60px;
+
+    }
+
+    img {
+        max-width: 150px;
+        margin-left: 0;
+
+    }
+
+    video {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        min-width: 100%;
+        min-height: 100%;
+        width: auto;
+        height: 500px;
+        z-index: -100;
+        transform: translateX(-50%) translateY(-50%);
+        background: url('images/header-bg.jpg') no-repeat;
+        background-size: cover;
+        transition: 1s opacity;
+    }
+
+.logo {
+      width: 150px;
+  }
+
+#small-logo {
+  margin-left: 10px;
+}
+}
+
+
+@media screen and (max-width: 1024px) {
+#header-overlay {
+      height: 767px;
+
+    }
+
+    img {
+        max-width: 350px;
+        margin-left: 125px;
+        padding-top: 50px;
+
+    }
+
+    video {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        min-width: 100%;
+        min-height: 100%;
+        width: auto;
+        height: 500px;
+        z-index: -100;
+        transform: translateX(-50%) translateY(-50%);
+        background: url('images/header-bg.jpg') no-repeat;
+        background-size: cover;
+        transition: 1s opacity;
+    }
+
+#logo {
+  width: 50px;
+  margin-left: 0;
+}
+
+#small-logo {
+  width: 50px;
+  margin: 0 auto;
+  padding-top: 10px;
+}
+}
+
 /*---- General ----*/
 
 .section-title {
@@ -103,10 +180,10 @@ p {
 /*----- Header -----*/
 
 .header {
-    background-image: url("../images/header-bg.jpg");
+    /*background-image: url("../images/header-bg.jpg");*/
     background-attachment: fixed;
     background-repeat: no-repeat;
-    background-position: 50% 50%;
+    background-position: 50% 5%;
     background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -116,26 +193,33 @@ p {
 
 .header-overlay {
     background-color: rgba(31, 31, 31, 0.75);
+    height: 1016px;
 
 }
 
-.logo {
-    padding-bottom: 50px;
+#small-logo {
+    width: 50px;
+    height: 45px;
+}
 
+#logo {
+    width: 550px;
+    margin-left: 850px;
 }
 
 .header-text h1 {
     color: #fff;
-    font-size: 35px;
-    font-weight: 300;
-    line-height: 45px;
-    padding-top: 30px;
+    font-size: 45px;
+    font-weight: 400;
+    line-height: 45px
     text-transform: uppercase;
+    margin-top: 0;
 }
 
 .header-text p {
+    margin-top: 28px;
     color: #fff;
-    font-size: 17px;
+    font-size: 35px;
     line-height: 28px;
     font-weight: 300;
 }
@@ -200,9 +284,6 @@ p {
     color: #129CF3;
 }
 
-.header-iphone img {
-    width: 100%;
-}
 
 /*---- About us ----*/
 
@@ -211,12 +292,13 @@ p {
 
 }
 
-.about-iphone img {
+.about-marseille img {
     margin-top: 8px;
+    padding-bottom: 60px;
 }
 
 .choose-us-title {
-    padding-bottom: 50px;
+    padding-bottom: 0;
 
 }
 
@@ -226,6 +308,7 @@ p {
     font-size: 30px;
     line-height: 37px;
     position: relative;
+    margin-top: 0;
 }
 
 .choose-us-title h2:after {
@@ -458,6 +541,173 @@ p {
     background-color: #1274B1;
     border-color: #316890;
 }
+
+/*---- Formation Section ----*/
+
+/* dragula default styles */
+
+.gu-mirror {
+  position: fixed !important;
+  margin: 0 !important;
+  z-index: 9999 !important;
+  opacity: 0.8;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=80)";
+  filter: alpha(opacity=80);
+}
+.gu-hide {
+  display: none !important;
+}
+.gu-unselectable {
+  -webkit-user-select: none !important;
+  -moz-user-select: none !important;
+  -ms-user-select: none !important;
+  user-select: none !important;
+}
+.gu-transit {
+  opacity: 0.2;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=20)";
+  filter: alpha(opacity=20);
+}
+
+/* custom CSS */
+
+
+.help {
+  font-family:sans-serif;
+  font-size:3vmin;
+  font-size: 30px;
+  color: #FFF;
+}
+
+.pitch {
+  background-color:#5d9634;
+  background: linear-gradient(
+    to bottom,
+    #5d9634,
+    #5d9634 50%,
+    #538c2b 50%,
+    #538c2b
+  );
+  background-size: 100% 20vmin;
+  padding:1vmin;
+}
+
+.bench {
+  background-color:#006;
+  padding:1vmin;
+}
+
+.container-2 {
+  display:flex;
+  height:10vmin;
+  justify-content:space-around;
+  list-style:none;
+  margin:6vmin 0;
+}
+
+.container-2 li,
+.gu-mirror {
+  cursor:move;
+  cursor: -webkit-grab;
+  cursor: -moz-grab;
+  cursor: grab;
+  height:10vmin;
+  list-style:none;
+  position:relative;
+  width:10vmin;
+}
+
+.gu-mirror {
+  cursor:move;
+  cursor: -webkit-grabbing;
+  cursor: -moz-grabbing;
+  cursor: grabbing;
+}
+
+.container-2 li .number,
+.gu-mirror .number {
+  background-color:#fff;
+  color:#c00;
+  font-family:sans-serif;
+  font-size:4vmin;
+  left:2vmin;
+  padding:1vmin .5vmin;
+  position:absolute;
+  right:2vmin;
+  text-align:center;
+  text-shadow:0 0 1px #fff;
+  top:0;
+}
+
+.container-2 li .number:before,
+.gu-mirror .number:before {
+  background-color:#def;
+  content:"";
+  height:2vmin;
+  left:0;
+  position:absolute;
+  top:0;
+  transform:rotate(60deg);
+  transform-origin:top left;
+  width:2vmin;
+}
+
+.container-2 li .number:after,
+.gu-mirror .number:after {
+  background-color:#def;
+  content:"";
+  height:2vmin;
+  position:absolute;
+  right:0;
+  top:0;
+  transform:rotate(-60deg);
+  transform-origin:top right;
+  width:2vmin;
+}
+
+#goal li .number {
+  background-color:#060;
+  color:#fff;
+}
+
+#goal li .number:before,
+#goal li .number:after {
+  background-color:#050;
+}
+
+.container-2 li .name,
+.gu-mirror .name {
+  bottom:0;
+  color:#fff;
+  font-family:sans-serif;
+  font-size:3vmin;
+  left:-5vmin;
+  position:absolute;
+  right:-5vmin;
+  text-align:center;
+}
+
+/*---- Video Section ----*/
+
+video {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    min-width: 100%;
+    min-height: 100%;
+    width: auto;
+    height: auto;
+    z-index: -100;
+    transform: translateX(-50%) translateY(-50%);
+    background: url('images/header-bg.jpg') no-repeat;
+    background-size: cover;
+    transition: 1s opacity;
+}
+
+.stopfade {
+   opacity: .5;
+}
+
 
 /*---- Counter Section ----*/
 
